chromeos: Fix DeviceLocalAccountTest under SingleProcessMash

Window close events are sent over mojo between browser and ash. The
test needs to wait for in-flight messages to complete before making
assertions about the state of ash.

Also fix a problem where the window delete message wasn't being sent
by WindowTreeClient.

Bug: 877118
Test: DeviceLocalAccountTest.LastWindowClosedLogoutReminder
Change-Id: I43145c8140462428a7db050489593038745c8f94
Reviewed-on: https://chromium-review.googlesource.com/c/1284059
Commit-Queue: James Cook <jamescook@chromium.org>
Reviewed-by: Pavol Marko <pmarko@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600886}